KULAR-533 : Committed a slight change to the statement detail layout to resolve a truncating problem.

--- a/work/src/org/kuali/kfs/module/ar/report/StatementDetails.jrxml
+++ b/work/src/org/kuali/kfs/module/ar/report/StatementDetails.jrxml
@@ -198,7 +198,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$F{documentNumber}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						style="dataCell"
 						mode="Transparent"
