--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgSalarySummary.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgSalarySummary.jrxml
@@ -23,6 +23,7 @@
 	<import value="net.sf.jasperreports.engine.*" />
 	<import value="net.sf.jasperreports.engine.data.*" />
 
+
 	<field name="fiscalYear" class="java.lang.String"/>
 	<field name="chartOfAccountsCode" class="java.lang.String"/>
 	<field name="chartOfAccountDescription" class="java.lang.String"/>
@@ -78,6 +79,7 @@
 	<field name="conAveragechange" class="java.lang.Integer"/>
 	<field name="conPercentChange" class="java.math.BigDecimal"/>
 	<field name="threshold" class="java.lang.String"/>
+
 
 		<group  name="OrganizationCodeGroup" isStartNewPage="true" isReprintHeaderOnEachPage="true" >
 			<groupExpression><![CDATA[$F{organizationCode}]]></groupExpression>
@@ -1547,11 +1549,11 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{csfAmount}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="185"
 						y="0"
-						width="50"
+						width="52"
 						height="12"
 						key="textField-195"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
