KULBUD-103: Organization Salary Summary is truncating Person FTE

--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgSalarySummary.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgSalarySummary.jrxml
@@ -2,7 +2,7 @@
 <!-- Created with iReport - A designer for JasperReports -->
 <!DOCTYPE jasperReport PUBLIC "//JasperReports//DTD Report Design//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
 <jasperReport
-		 name="BudgetOrgAccountSummary"
+		 name="BudgetOrgSalarySummary"
 		 columnCount="1"
 		 printOrder="Vertical"
 		 orientation="Landscape"
@@ -482,11 +482,11 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$R{percentSymbol}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="185"
 						y="8"
-						width="50"
+						width="52"
 						height="12"
 						key="textField-278"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
