--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReasonSummary.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReasonSummary.jrxml
@@ -1707,7 +1707,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{appointmentFundingReasonAmount}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="552"
 						y="13"
