--- a/work/src/org/kuali/kfs/module/bc/report/BudgetAccountSalaryDetail.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetAccountSalaryDetail.jrxml
@@ -640,7 +640,7 @@
 						key="line-69"/>
 					<graphicElement stretchType="NoStretch"/>
 				</line>
-				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="312"
 						y="138"
